@@ -1,3 +1,11 @@
+2006-12-07  Mark Wielaard  <mark@klomp.org>
+
+	* java/net/URL.java (URL(URL,String,URLStreamHandler,boolean)): New
+	private constructor.
+	(URL(URL,String,URLStreamHandler)): Call new constructor.
+	(URL(URL,String)): Likewise.
+	(URL(String)): Likewise.
+
 2006-12-07  Tom Tromey  <tromey@redhat.com>
 
 	* NEWS: Mention ASM.
